Add trip detail, participants and validate trip api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+
+storage:
+  file:
+    path: /var/www/we-phuot
