--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lightdevel.wephuot</groupId>
-    <artifactId>wephuot-money-management</artifactId>
+    <artifactId>money-management</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
+        <version>2.3.3.RELEASE</version>
     </parent>
 
-    <name>wephuot-money-management</name>
+    <name>money-management</name>
 
     <properties>
         <postgres.version>42.2.5</postgres.version>
         <lombok.version>1.18.2</lombok.version>
         <joda.version>2.10.1</joda.version>
         <swagger.version>2.9.2</swagger.version>
+        <httpclient.version>4.5.12</httpclient.version>
     </properties>
 
     <dependencies>
@@ -41,9 +42,21 @@
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgres.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
 
         <!-- Common utils -->
@@ -57,6 +70,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
 
         <!-- Swagger -->
